--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 <div class="gift-box">
                     ✉️ <strong>Lluvia de Sobres:</strong><br>
                     Tu presencia es nuestro mejor regalo, pero si deseas tener un detalle:<br>
-                    <span class="copy-acc" onclick="copyAccount()">Nequi: 3228853714 (Copiar)</span>
+                    <span class="copy-acc" onclick="copyAccount()">Nequi: 3228853714</span>
                 </div>
 
                 <div class="actions">
