--- a/index.html
+++ b/index.html
@@ -196,8 +196,16 @@ body{
 </div>
 
 <div class="info-grid">
-<p><strong>Lugar:</strong><br>Cra. 21b #11667<br>Bucaramanga, Santander</p><br>
-<p><strong>Fecha y Hora:</strong><br>4 de Abril, 2026<br>4:00 PM</p>
+  <p><strong>Lugar:</strong><br>
+  Cra. 21b #116 - 67 Provenza<br>
+  Frente Conjunto Comultrasan<br>
+  Bucaramanga, Santander</p>
+  
+  <br>
+  
+  <p><strong>Fecha y Hora:</strong><br>
+  04 de Abril, 2026<br>
+  4:00 PM</p>
 </div>
 
 <div class="gift-box">
