--- a/index.html
+++ b/index.html
@@ -68,7 +68,6 @@ body{
  margin-top:2rem;
  box-shadow:0 10px 30px rgba(0,0,0,.3);
 }
-
 /* FONDO INTERNO */
 #card{
  position:relative;
@@ -79,6 +78,40 @@ body{
  background:linear-gradient(#dff3ff,#ffffff);
 }
 
+/* NUBES CAPA 1 */
+#card::before{
+ content:"";
+ position:absolute;
+ width:200%;
+ height:200px;
+ top:50px;
+ background:
+ radial-gradient(circle at 100px 80px,#fff 60px,transparent 61px),
+ radial-gradient(circle at 300px 70px,#fff 50px,transparent 51px),
+ radial-gradient(circle at 500px 90px,#fff 60px,transparent 61px);
+ animation:clouds 80s linear infinite;
+ opacity:.5;
+ pointer-events:none;
+}
+/* NUBES CAPA 2 */
+#card::after{
+ content:"";
+ position:absolute;
+ width:200%;
+ height:200px;
+ top:150px;
+ background:
+ radial-gradient(circle at 150px 80px,#fff 70px,transparent 71px),
+ radial-gradient(circle at 400px 60px,#fff 60px,transparent 61px);
+ animation:clouds 120s linear infinite reverse;
+ opacity:.35;
+ pointer-events:none;
+}
+
+@keyframes clouds{
+ from{transform:translateX(0);}
+ to{transform:translateX(-50%);}
+}
 .card-header{
  height:180px;
  background:url('https://images.unsplash.com/photo-1616938959950-8b63e8093d97?q=80&w=800&auto=format&fit=crop') center/cover;
